--- a/popup.css
+++ b/popup.css
@@ -17,4 +17,13 @@ button {
 #results {
   max-height: 400px;
   overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.item{
+border: solid 1px #000;
+padding: 10px;
+display: flex;
+gap: 10px;
 }
